[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/NewKanbanBoard.gd" type="Script" id=1]

[node name="NewKanbanBoard" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Contents" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Toolbar" type="HBoxContainer" parent="Contents"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="NewKanbanItemNameEdit" type="LineEdit" parent="Contents/Toolbar"]
margin_right = 456.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "BRD Item Name"

[node name="NewKanbanItemDescriptionEdit" type="LineEdit" parent="Contents/Toolbar"]
margin_left = 460.0
margin_right = 917.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "BRD Item Description"

[node name="AddKanbanItem" type="Button" parent="Contents/Toolbar"]
margin_left = 921.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Add BRD Item"

[node name="Items" type="HBoxContainer" parent="Contents"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="Contents/Items"]
margin_right = 1024.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TodoScroll" type="ScrollContainer" parent="Contents/Items/HSplitContainer"]
margin_right = 506.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/Items/HSplitContainer/TodoScroll"]
margin_right = 506.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DoneScroll" type="ScrollContainer" parent="Contents/Items/HSplitContainer"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/Items/HSplitContainer/DoneScroll"]
margin_right = 506.0
margin_bottom = 548.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeleteBRDButton" type="Button" parent="Contents"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0
text = "Delete BRD"

[connection signal="text_entered" from="Contents/Toolbar/NewKanbanItemNameEdit" to="." method="_on_NewKanbanItemNameEdit_text_entered"]
[connection signal="text_entered" from="Contents/Toolbar/NewKanbanItemDescriptionEdit" to="." method="_on_NewKanbanItemDescriptionEdit_text_entered"]
[connection signal="pressed" from="Contents/Toolbar/AddKanbanItem" to="." method="_on_AddKanbanItem_pressed"]
